# agentic-eval

./: .gitignore  Dockerfile  GUIDELINES.md  LICENSE.md  README.md  codecov.yml  pyproject.toml
