[project]
name = "agentic-ai-evaluation-bootcamp-202602"
version = "0.1.1"
description = "Vector Institute Agentic AI Evaluation Bootcamp 202602"
readme = "README.md"
authors = [ {name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"} ]
license = "Apache-2.0"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aieng-eval-agents>=0.1.0",
    "aiohttp>=3.13.4",
    "beautifulsoup4>=4.13.4",
    "datasets>=3.6.0",
    "e2b-code-interpreter>=2.4.1",
    "langfuse>=3.10.3,<4.0.0",
    "lxml>=6.0.0",
    "nest-asyncio>=1.6.0",
    "numpy<2.3.0",
    "plotly>=6.5.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.7.0",
    "pydantic-ai-slim[logfire]>=1.26.0",
    "scikit-learn>=1.7.0",
    "urllib3>=2.7.0",
    "openpyxl>=3.1.5",
    "authlib>=1.6.11",
    "cryptography>=46.0.7",
    "filelock>=3.20.3",
    "pyasn1>=0.6.3",
    "virtualenv>=20.36.1",
    "tenacity>=9.1.2",
    "certifi>=2026.1.4",
    "pillow>=12.2.0",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.27",
]

[dependency-groups]
dev = [
    "aieng-platform-onboard>=0.6.3",
    "mypy>=1.19.0",
    "codecov>=2.1.13",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.7",
    "nbqa>=1.9.1",
    "pip>=26.1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.14.7",
    "transformers>=4.57.3",
    "pandas-stubs>=2.3.3.260113",
]
docs = [
    "jinja2>=3.1.6",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.15",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
]
web-search = [
    "google-cloud-firestore>=2.21.0",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.46.0",
    "python-multipart>=0.0.27",
    "simplejson>=3.20.2",
]

[tool.uv]
default-groups = ["dev", "docs"]
override-dependencies = [
    "authlib>=1.6.11",
    "jupyter-server>=2.18.0",
    "mako>=1.3.12",
    "mistune>=3.2.1",
    "notebook>=7.5.6",
    "urllib3>=2.7.0",
]

[tool.uv.workspace]
members = [
  "aieng-eval-agents",
]

[tool.uv.sources]
aieng-eval-agents = { workspace = true }

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",
    "B",
    "COM",
    "C4",
    "RET",
    "SIM",
    "ICN",
    "Q",
    "RSE",
    "D",
    "E",
    "F",
    "I",
    "W",
    "N",
    "ERA",
    "PL",
]
fixable = ["A", "B", "COM", "C4", "RET", "SIM", "ICN", "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL"]
ignore = [
    "B905",
    "E501",
    "D203",
    "D213",
    "PLR2004",
    "PLR0913",
    "COM812",
    "N999",
    "ERA001",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811", "D104"]
"*.ipynb" = ["E402", "D100", "D103"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
markers = [
    "integration_test: marks tests as integration tests",
]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:deprecated:DeprecationWarning:google.adk.runners",
    "ignore:Inheritance class AiohttpClientSession:DeprecationWarning:google.genai",
    "ignore:[EXPERIMENTAL] BaseAgentState:UserWarning:aieng.agent_evals.aml_investigation.workflow",
]

[tool.coverage]
    [tool.coverage.run]
    source=["aieng-eval-agents/aieng"]
    omit=["aieng-eval-agents/tests/*", "*__init__.py", "scripts/*"]

[tool.mypy]
mypy_path = "aieng-eval-agents"
namespace_packages = true
explicit_package_bases = true
exclude = ["tests/"]
