# pyproject.toml – Project configuration for agentic-ai-evaluation-bootcamp-202602

# Project metadata (PEP 621)
[project]
name = "agentic-ai-evaluation-bootcamp-202602"      # Package name
version = "0.1.1"                                   # Current version
description = "Vector Institute Agentic AI Evaluation Bootcamp 202602"  # Short description
readme = "README.md"                                # Path to README file
authors = [ {name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"} ]  # Author info
license = "Apache-2.0"                              # License type
requires-python = ">=3.12,<4.0"                     # Python version constraint

# Runtime dependencies
dependencies = [
    "aieng-eval-agents>=0.1.0",                     # Internal evaluation agents package
    "aiohttp>=3.13.4",                              # Async HTTP client/server
    "beautifulsoup4>=4.13.4",                       # HTML/XML parsing library
    "datasets>=3.6.0",                              # Hugging Face datasets library
    "e2b-code-interpreter>=2.4.1",                  # Cloud code interpreter for agents
    "langfuse>=3.10.3,<4.0.0",                      # LLM observability and tracing
    "lxml>=6.0.0",                                  # Fast XML/HTML parser
    "nest-asyncio>=1.6.0",                          # Allow asyncio to run in nested loops
    "numpy<2.3.0",                                  # Numerical computing (version locked)
    "plotly>=6.5.0",                                # Interactive visualizations
    "pydantic>=2.12.4",                             # Data validation with type hints
    "pydantic-settings>=2.7.0",                     # Settings management for pydantic
    "pydantic-ai-slim[logfire]>=1.26.0",            # Pydantic AI agent framework with logfire
    "scikit-learn>=1.7.0",                          # Machine learning utilities
    "urllib3>=2.7.0",                               # HTTP client with security fixes
    "openpyxl>=3.1.5",                              # Read/write Excel files
    "authlib>=1.6.11",                              # Authentication (CSRF fix)
    "cryptography>=46.0.7",                         # Cryptographic primitives
    "filelock>=3.20.3",                             # Cross-platform file locking
    "pyasn1>=0.6.3",                                # ASN.1 encoding/decoding
    "virtualenv>=20.36.1",                          # Create isolated Python environments
    "tenacity>=9.1.2",                              # Retry library for flaky operations
    "certifi>=2026.1.4",                            # SSL certificate bundle
    "pillow>=12.2.0",                               # Image processing
    "pypdf>=6.10.2",                                # PDF parsing
    "python-multipart>=0.0.27",                     # Multipart form data parsing
]

# Dependency groups (development, docs, web-search)
[dependency-groups]
dev = [                                             # Development dependencies
    "aieng-platform-onboard>=0.6.3",                # Internal onboarding tools
    "mypy>=1.19.0",                                 # Static type checker
    "codecov>=2.1.13",                              # Code coverage reporting
    "ipykernel>=7.1.0",                             # Jupyter kernel for notebooks
    "ipython>=9.8.0",                               # Interactive Python shell
    "ipywidgets>=8.1.7",                            # Interactive widgets in notebooks
    "jupyter>=1.1.1",                               # Jupyter meta-package
    "jupyterlab>=4.5.7",                            # JupyterLab IDE
    "nbqa>=1.9.1",                                  # Run linters on notebooks
    "pip>=26.1",                                    # Package installer
    "pip-audit>=2.9.0",                             # Audit dependencies for vulnerabilities
    "pre-commit>=4.2.0",                            # Git pre-commit hooks
    "pytest>=9.0.3",                                # Testing framework
    "pytest-asyncio>=0.26.0",                       # Async test support
    "pytest-cov>=6.1.1",                            # Coverage plugin for pytest
    "pytest-mock>=3.14.0",                          # Mocking plugin
    "ruff>=0.14.7",                                 # Fast Python linter/formatter
    "transformers>=4.57.3",                         # Hugging Face transformers
    "pandas-stubs>=2.3.3.260113",                   # Type stubs for pandas
]
docs = [                                            # Documentation dependencies
    "jinja2>=3.1.6",                                # Templating engine
    "mkdocs>=1.6.0",                                # Static site generator for docs
    "mkdocs-material>=9.6.15",                      # Material theme for MkDocs
    "mkdocstrings>=1.0.0",                          # Generate API docs from docstrings
    "mkdocstrings-python>=2.0.1",                   # Python handler for mkdocstrings
    "ipykernel>=7.1.0",                             # Jupyter kernel (notebooks in docs)
    "ipython>=9.8.0",                               # Interactive Python
]
web-search = [                                      # Web search agent dependencies
    "google-cloud-firestore>=2.21.0",               # Firestore database client
    "fastapi[standard]>=0.116.1",                   # Web framework for API
    "google-genai>=1.46.0",                         # Google Generative AI client
    "python-multipart>=0.0.27",                     # Multipart form handling
    "simplejson>=3.20.2",                           # Faster JSON (C extensions)
]

# UV tool configuration
[tool.uv]
default-groups = ["dev", "docs"]                    # Default dependency groups to install
override-dependencies = [                           # Override transitive dependencies to patched versions
    "authlib>=1.6.11",                              # CSRF protection fix
    "jupyter-server>=2.18.0",                       # Security fixes for Jupyter
    "mako>=1.3.12",                                 # Path traversal fix
    "mistune>=3.2.1",                               # ReDoS and XSS fixes
    "notebook>=7.5.6",                              # Stored XSS fix
    "urllib3>=2.7.0",                               # Header forwarding and decompression fixes
]

# UV workspace configuration
[tool.uv.workspace]
members = [                                         # List of workspace members (packages)
  "aieng-eval-agents",                              # Internal agent package
]

# Source overrides for workspace members
[tool.uv.sources]
aieng-eval-agents = { workspace = true }            # Use local workspace version

# Ruff linter/formatter configuration
[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]     # File patterns to check
line-length = 120                                   # Maximum line length

[tool.ruff.format]
quote-style = "double"                              # Use double quotes
indent-style = "space"                              # Spaces not tabs
docstring-code-format = true                        # Format code inside docstrings

[tool.ruff.lint]
select = [                                          # Enabled lint rules
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ICN",  # flake8-import-conventions
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "D",    # pydocstyle
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "ERA",  # eradicate
    "PL",   # pylint
]
fixable = ["A", "B", "COM", "C4", "RET", "SIM", "ICN", "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL"]
ignore = [                                          # Rules to ignore
    "B905",   # zip() without strict=
    "E501",   # line too long (handled by formatter)
    "D203",   # blank line before class docstring
    "D213",   # multi-line docstring summary position
    "PLR2004", # magic number
    "PLR0913", # too many arguments
    "COM812", # missing trailing comma
    "N999",   # number in module names
    "ERA001", # commented-out code
]

# Per-file ignore rules
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811", "D104"]  # init files: ignore import issues
"*.ipynb" = ["E402", "D100", "D103"]                    # Notebooks: ignore import order and docstrings

# Naming conventions
[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]                      # Allow X* and setUp

# isort import sorting
[tool.ruff.lint.isort]
lines-after-imports = 2                             # Two blank lines after imports

# pydocstyle conventions
[tool.ruff.lint.pydocstyle]
convention = "numpy"                                # Use NumPy docstring style

[tool.ruff.lint.pycodestyle]
max-doc-length = 88                                 # Maximum docstring length

# Pytest configuration
[tool.pytest.ini_options]
markers = [                                         # Custom pytest markers
    "integration_test: marks tests as integration tests",
]
asyncio_default_fixture_loop_scope = "function"     # Async fixture scope
filterwarnings = [                                  # Ignore specific warnings
    "ignore:deprecated:DeprecationWarning:google.adk.runners",
    "ignore:Inheritance class AiohttpClientSession:DeprecationWarning:google.genai",
    "ignore:[EXPERIMENTAL] BaseAgentState:UserWarning:aieng.agent_evals.aml_investigation.workflow",
]

# Coverage configuration
[tool.coverage]
    [tool.coverage.run]
    source=["aieng-eval-agents/aieng"]              # Source directories to measure
    omit=["aieng-eval-agents/tests/*", "*__init__.py", "scripts/*"]  # Files to exclude

# MyPy type checker configuration
[tool.mypy]
mypy_path = "aieng-eval-agents"                     # Path to mypy
namespace_packages = true                           # Support namespace packages
explicit_package_bases = true                       # Require explicit package roots
exclude = ["tests/"]                                # Exclude test directory
